objects/OpportunityWorkRequestForm__c.object
<CustomObject>
    <description>This object is used for WRF-POLK. An associative object between Opportunities and Work Request Forms to represent their many-to-many relationship.</description>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The Opportunity that this Opportunity Work Request Form associative object belongs to.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Request Forms</relationshipLabel>
        <relationshipName>Opportunity_Work_Request_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique identifier that is a combination of both parents of this object. It will help prevent duplicates.</description>
        <label>UID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <description>The Work Request Form that this Opportunity Work Request Form associative object belongs to.</description>
        <label>Work Request Form</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You cannot associate an Internal Work Request Form with an Opportunity.</errorMessage>
            <filterItems>
                <field>WorkRequestForm__c.Internal__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>OpportunityWorkRequestForms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Work Request Form</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Opportunity Work Request Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Work Request Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>